CHROMIUM: ARM: dts: create hwmon instances for thermal on rk3288
Let's annotate thermal zones on rk3288 with "linux,hwmon" so that
thermal core create for us matching hwmon devices.

BUG=chrome-os-partner:33449
TEST=verify that there are /sys/class/hwmon nodes matching thermal
zones; verify that temperature can be read.

Change-Id: Ife587666047e31f7e6f64d80edf0ffa937f74b0d
Signed-off-by: Dmitry Torokhov <dtor@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/227192
Reviewed-by: 王 晓腾 <caesar.wang@rock-chips.com>
Reviewed-by: Doug Anderson <dianders@chromium.org>
Reviewed-by: Sonny Rao <sonnyrao@chromium.org>

--- a/arch/arm/boot/dts/rk3288-thermal.dtsi
+++ b/arch/arm/boot/dts/rk3288-thermal.dtsi
@@ -25,6 +25,7 @@ cpu_thermal: cpu_thermal {
 
 			/* sensor	ID */
 	thermal-sensors = <&tsadc	1>;
+	linux,hwmon;
 
 	trips {
 		cpu_alert0: cpu_alert0 {
@@ -54,6 +55,7 @@ gpu_thermal: gpu_thermal {
 
 			/* sensor	ID */
 	thermal-sensors = <&tsadc	2>;
+	linux,hwmon;
 
 	trips {
 		gpu_alert0: gpu_alert0 {
