ARM: dts: add write-protect-gpio to rk3288-veyron
BUG=chrome-os-partner:33395
TEST=build successful, boots
without wp screw wpsw_cur=0
with wp screw wpsw_cur=1

Change-Id: If14710017bb3183d598fb3fceeeb1b42cbfd2721
Signed-off-by: Gediminas Ramanauskas <gedis@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/227493
Reviewed-by: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/rk3288-veyron.dtsi
+++ b/arch/arm/boot/dts/rk3288-veyron.dtsi
@@ -21,6 +21,14 @@
 		reg = <0x0 0x80000000>;
 	};
 
+	firmware {
+		chromeos {
+			pinctrl-names = "default";
+			pinctrl-0 = <&fw_wp_ap>;
+			write-protect-gpio = <&gpio7 6 GPIO_ACTIVE_LOW>;
+		};
+	};
+
 	backlight: backlight {
 		compatible = "pwm-backlight";
 		brightness-levels = <
@@ -715,6 +723,12 @@
 
 		usbotg_pwren_h: usbotg-pwren-h {
 			rockchip,pins = <0 12 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+	};
+
+	write-protect {
+		fw_wp_ap: fw-wp-ap {
+			rockchip,pins = <7 6 RK_FUNC_GPIO &pcfg_pull_none>;
 		};
 	};
 };
