CHROMIUM: ryu: dts: mark that arm arch timer never sleeps
Make it 'always-on' as it is needed for high precise oneshot timer.
High precise timer is critical for audio subsystem that expects timer
accurace in sub-millisecond range.
Otherwise timer resolution is 10ms.

BUG=chrome-os-partner:30793
BUG=chrome-os-partner:32981
TEST=Play audio on Ryu

Change-Id: Ib2e0f55cb6988faf557e6af28a637ef3f30567cc
Signed-off-by: Anatol Pomazau <anatol@google.com>
Reviewed-on: https://chromium-review.googlesource.com/227514
Reviewed-by: Olof Johansson <olofj@chromium.org>
Commit-Queue: David James <davidjames@chromium.org>

--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -1023,6 +1023,7 @@
 				(GIC_CPU_MASK_SIMPLE(4) | IRQ_TYPE_LEVEL_LOW)>,
 			     <GIC_PPI 10
 				(GIC_CPU_MASK_SIMPLE(4) | IRQ_TYPE_LEVEL_LOW)>;
+		always-on;
 	};
 
 	dfll_cap: dfll_cdev_cap {
