CHROMIUM: arm64: dts: ryu: add ryu-rev%d label
In order to allow for less touch in the firmware when
board ids change provide a ryu-rev%d label that coordinates
with the onboard board id strappings.

BUG=chrome-os-partner:33578
BRANCH=None
TEST=Booted old and new firmware on proto1 board.

Change-Id: I39953833364d11a65c1eed1c75fe3d3cdd19511e
Signed-off-by: Aaron Durbin <adurbin@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/227661
Reviewed-by: Benson Leung <bleung@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu-p0.dts
+++ b/arch/arm64/boot/dts/tegra132-ryu-p0.dts
@@ -4,8 +4,8 @@
 
 / {
 	model = "Google Tegra132 Ryu P0";
-	compatible = "google,ryu-p0", "google,ryu", "nvidia,tegra132", \
-			"nvidia,tegra124";
+	compatible = "google,ryu-rev0", "google,ryu-p0", "google,ryu", \
+			"nvidia,tegra132", "nvidia,tegra124";
 
 	regulators {
 		pplcd_vdd: fixed-regulator@5 {
