--- a/arch/arm64/boot/dts/tegra132-ryu-p1.dts
+++ b/arch/arm64/boot/dts/tegra132-ryu-p1.dts
@@ -4,8 +4,8 @@
 
 / {
 	model = "Google Tegra132 Ryu P1";
-	compatible = "google,ryu-p1", "google,ryu", "nvidia,tegra132", \
-			"nvidia,tegra124";
+	compatible = "google,ryu-rev1", "google,ryu-p1", "google,ryu", \
+			"nvidia,tegra132", "nvidia,tegra124";
 
 	regulators {
 		pplcd_vdd: fixed-regulator@5 {
