--- a/arch/arm/boot/dts/qcom-ipq8064-whirlwind.dts
+++ b/arch/arm/boot/dts/qcom-ipq8064-whirlwind.dts
@@ -202,6 +202,20 @@
 			ranges = <0x00000000 0 0x00000000 0x0ff00000 0 0x00100000   /* configuration space */
 				  0x81000000 0 0	  0x0fe00000 0 0x00100000   /* downstream I/O */
 				  0x82000000 0 0x00000000 0x08000000 0 0x07e00000>; /* non-prefetchable memory */
+
+			pcie@0 {
+				reg = <0 0 0 0 0>;
+				#interrupt-cells = <1>;
+				#size-cells = <2>;
+				#address-cells = <3>;
+				device_type = "pci";
+
+				ath10k@0,0 {
+					reg = <0 0 0 0 0>;
+					device_type = "pci";
+					qcom,ath10k-calibration-data = [00];
+				};
+			};
 		};
 
 		pci@1b700000 {
@@ -214,6 +228,19 @@
 				  0x81000000 0 0	  0x31e00000 0 0x00100000   /* downstream I/O */
 				  0x82000000 0 0x00000000 0x2e000000 0 0x03e00000>; /* non-prefetchable memory */
 
+			pcie@0 {
+				reg = <0 0 0 0 0>;
+				#interrupt-cells = <1>;
+				#size-cells = <2>;
+				#address-cells = <3>;
+				device_type = "pci";
+
+				ath10k@0,0 {
+					reg = <0 0 0 0 0>;
+					device_type = "pci";
+					qcom,ath10k-calibration-data = [00];
+				};
+			};
 		};
 
 		pci@1b900000 {
@@ -228,6 +255,19 @@
 				  0x81000000 0 0	  0x35e00000 0 0x00100000   /* downstream I/O */
 				  0x82000000 0 0x00000000 0x32000000 0 0x03e00000>; /* non-prefetchable memory */
 
+			pcie@0 {
+				reg = <0 0 0 0 0>;
+				#interrupt-cells = <1>;
+				#size-cells = <2>;
+				#address-cells = <3>;
+				device_type = "pci";
+
+				ath10k@0,0 {
+					reg = <0 0 0 0 0>;
+					device_type = "pci";
+					qcom,ath10k-calibration-data = [00];
+				};
+			};
 		};
 
 		sata-phy@1b400000 {
