ARM: dts: add dts file for rk3288-jerry-rev2
Added rk3288-jerry-rev2 based on rk3288-veyron.dtsi
Also remove the TPM interrupt lines since it's not used and won't be
present going forward.

BUG=chrome-os-partner:33269
TEST=build successful

Change-Id: I41b62b4780b9e8eba1c9b88ed85f28467a6ce385
Signed-off-by: Chris Zhong <zyw@rock-chips.com>
Signed-off-by: Sonny Rao <sonnyrao@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/228757
Reviewed-by: Katie Roberts-Hoffman <katierh@chromium.org>

--- a/arch/arm/boot/dts/rk3288-veyron.dtsi
+++ b/arch/arm/boot/dts/rk3288-veyron.dtsi
@@ -78,7 +78,7 @@
 		backlight = <&backlight>;
 	};
 
-	gpio-keys {
+	gpio_keys: gpio-keys {
 		compatible = "gpio-keys";
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -493,8 +493,6 @@
 	tpm: tpm@20 {
 		compatible = "infineon,slb9645tt";
 		reg = <0x20>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&tpm_int_h>;
 		powered-while-suspended;
 	};
 };
