CHROMIUM: ARM: dts: add the reset for thermal on rk3288
Let's reset tsadc controller before configuring it.

BUG=chrome-os-partner:33449;
TEST=Build and boot, verify that temperature can be changed on
pinky v1, v2, jerry boards.

Signed-off-by: Caesar Wang <caesar.wang@rock-chips.com>
Change-Id: Iaaff58097f1d4f431cabcb03745bfe051b0c9fe5
Reviewed-on: https://chromium-review.googlesource.com/228756
Reviewed-by: Dmitry Torokhov <dtor@chromium.org>

--- a/arch/arm/boot/dts/rk3288.dtsi
+++ b/arch/arm/boot/dts/rk3288.dtsi
@@ -375,6 +375,8 @@
 		interrupts = <GIC_SPI 37 IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&cru SCLK_TSADC>, <&cru PCLK_TSADC>;
 		clock-names = "tsadc", "apb_pclk";
+		resets = <&cru SRST_TSADC>;
+		reset-names = "tsadc-apb";
 		pinctrl-names = "otp_out";
 		pinctrl-0 = <&otp_out>;
 		#thermal-sensor-cells = <1>;
