CHROMIUM: storm: Add device tree entries for a couple of gpios.
FAFT (fully automated firmware test) needs these in the device tree to
work correctly. Both of these inputs use reverse logic on Storm (low
level means '1' and vice versa).

BUG=chrome-os-partner:33660
TEST='crossystem recoverysw_cur wpsw_cur' gives 0 or 1 instead of 2.

Change-Id: I3b737081f1498095cf1f7bb2ef0fde76b4cc4e9c
Signed-off-by: Bryan Freed <bfreed@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/228854
Reviewed-by: Vadim Bendebury <vbendeb@chromium.org>
Commit-Queue: Bryan Freed <bfreed@google.com>
Tested-by: Bryan Freed <bfreed@google.com>

--- a/arch/arm/boot/dts/qcom-ipq8064-storm.dts
+++ b/arch/arm/boot/dts/qcom-ipq8064-storm.dts
@@ -17,6 +17,15 @@
 		mdio-gpio0 = &mdio0;
 	};
 
+	firmware {
+		chromeos {
+			pinctrl-0 = <&fw_pins>;
+			pinctrl-names = "default";
+			write-protect-gpio = <&qcom_pinmux 17 1>;
+			recovery-switch = <&qcom_pinmux 16 1>;
+		};
+	};
+
 	soc {
 		pinmux@800000 {
 			pinctrl-0 = <&rgmii0_pinmux>;
@@ -127,6 +136,17 @@
 				rst {
 					pins = "gpio26";
 					output-low;
+				};
+			};
+
+			fw_pins: fw_pinmux {
+				wp {
+					pins = "gpio17";
+					output-low;
+				};
+				recovery {
+					pins = "gpio16";
+					bias-none;
 				};
 			};
 		};
