--- a/arch/arm/boot/dts/rk3288-veyron.dtsi
+++ b/arch/arm/boot/dts/rk3288-veyron.dtsi
@@ -628,7 +628,7 @@
 			rockchip,pins = <6 5 RK_FUNC_GPIO &pcfg_pull_up>;
 		};
 		int_codec: int-codec {
-			rockchip,pins = <6 7 RK_FUNC_GPIO &pcfg_pull_down>;
+			rockchip,pins = <6 7 RK_FUNC_GPIO &pcfg_pull_up>;
 		};
 		mic_det: mic-det {
 			rockchip,pins = <6 11 RK_FUNC_GPIO &pcfg_pull_up>;
