CHROMIUM: arm64: dts: ryu: Fix lp8557i settings to make backlight works
- lp8557i control mode should set to BRTHI/BRTLO registers mode since
  we're not using the PWM mode
- Set the boost switching frequency to 1MHz to avoid flash

BUG=chrome-os-partner:33702
TEST=Backlight works(tested 5 times)

Change-Id: I46c2710e6d6997be9ee9a3c612680ab5a43edc04
Signed-off-by: Mark Zhang <markz@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/229235
Tested-by: Joseph Lo <josephl@nvidia.com>
Reviewed-by: Sean Paul <seanpaul@chromium.org>
Commit-Queue: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -400,7 +400,7 @@
 			power-supply = <&pplcd_vdd>;
 
 			bl-name = "lp8557-backlight";
-			dev-ctrl = /bits/ 8 <0x02>;
+			dev-ctrl = /bits/ 8 <0x01>;
 			init-brt = /bits/ 8 <0xFF>;
 
 			/* Full scale current, 20mA */
@@ -415,7 +415,7 @@
 				rom-val = /bits/ 8 <0x29>;
 			};
 
-			/* Boost freq = 500KHz, BComp option = 1 */
+			/* Boost freq = 1MHz, BComp option = 1 */
 			rom_13h {
 				rom-addr = /bits/ 8 <0x13>;
 				rom-val = /bits/ 8 <0x03>;
