CHROMIUM: arm64: dts: ryu: enable LCD regulators at boot
It doesn't hurt to enable the LCD regulators right away in
a non-dev/rec boot. However, in a dev/rec boot the regulators
are already on as the LCD panel needed to be turned on. Therefore,
the LCD will be enabled at probe time in a normal boot, and their
state is maintained during a dev/rec boot.

BUG=chrome-os-partner:31936
TEST=Ran on ryu using normal and dev boot. Display still works.

Change-Id: I35a359ad0c905544ad31bd38e397273bda4861fc
Signed-off-by: Aaron Durbin <adurbin@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/229737
Reviewed-by: Sean Paul <seanpaul@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -688,6 +688,7 @@
 			regulator-min-microvolt = <3000000>;
 			regulator-max-microvolt = <3000000>;
 			enable-active-high;
+			regulator-boot-on;
 		};
 
 		pp1800_lcdio: fixed-regulator@6 {
@@ -698,6 +699,7 @@
 			regulator-max-microvolt = <1800000>;
 			enable-active-high;
 			gpio = <&gpio TEGRA_GPIO(X, 0) GPIO_ACTIVE_HIGH>;
+			regulator-boot-on;
 		};
 	};
 
