CHROMIUM: ARM64: tegra: ryu: Switch USB3 port 1 lane to SATA_0
This was previously PCIE_1 based on Venice2's port layout, but
for the Tegra132 used in ryu, port 1 goes to SATA_0.

Signed-off-by: Benson Leung <bleung@chromium.org>

BUG=chrome-os-partner:33622
TEST=Check that USB 3.0 device enumerates as device 2-1 in one orientation
and in 2-2 in the second orientation of type-c cable.

Change-Id: I1057bd6cd43d139aafb489df26393bdf0ccb1d2b
Reviewed-on: https://chromium-review.googlesource.com/229835
Tested-by: Benson Leung <bleung@chromium.org>
Reviewed-by: Andrew Bresticker <abrestic@chromium.org>
Commit-Queue: Benson Leung <bleung@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -507,7 +507,7 @@
 
 		vbus-2-supply = <&vdd_usb3_vbus>;
 		nvidia,usb3-port-0-lane = <TEGRA_XUSB_PADCTL_PIN_PCIE_0>;
-		nvidia,usb3-port-1-lane = <TEGRA_XUSB_PADCTL_PIN_PCIE_1>;
+		nvidia,usb3-port-1-lane = <TEGRA_XUSB_PADCTL_PIN_SATA_0>;
 
 		padctl_default: pinmux {
 			otg {
@@ -523,7 +523,7 @@
 			};
 
 			usb3p1 {
-				nvidia,lanes = "pcie-1";
+				nvidia,lanes = "sata-0";
 				nvidia,function = "usb3";
 				nvidia,iddq = <0>;
 				nvidia,usb2-port-num = <0>;
