FROMLIST: ARM: rockchip: add suspend and resume for RK3288
It's a basic version of suspend and resume for rockchip,
it only support RK3288 now.

Conflicts:
    arch/arm/mach-rockchip/Makefile
    arch/arm/mach-rockchip/rockchip.c
...conflicts due to local l2 cache code (we skipped some upstream
cleanup commits) and due to power domain patches.

BUG=chrome-os-partner:32377
TEST=It can suspend by "echo mem > /sys/power/state", and resume by power button

Change-Id: If5b4dc6b97414deff9f6b4719f95268c949fdf17
Signed-off-by: Tony Xie <xxx@rock-chips.com>
Signed-off-by: Chris Zhong <zyw@rock-chips.com>
Tested-by: Doug Anderson <dianders@chromium.org>
Reviewed-by: Doug Anderson <dianders@chromium.org>
Signed-off-by: Doug Anderson <dianders@chromium.org>
(am from https://patchwork.kernel.org/patch/5311641/)
Reviewed-on: https://chromium-review.googlesource.com/215780

--- a/arch/arm/mach-rockchip/Makefile
+++ b/arch/arm/mach-rockchip/Makefile
@@ -1,3 +1,4 @@
 obj-$(CONFIG_ARCH_ROCKCHIP) += rockchip.o
 obj-$(CONFIG_PM_GENERIC_DOMAINS) += pm_domains.o
+obj-$(CONFIG_PM_SLEEP) += pm.o sleep.o
 obj-$(CONFIG_SMP) += headsmp.o platsmp.o
