--- a/arch/arm/boot/dts/rk3288-jerry-rev2.dts
+++ b/arch/arm/boot/dts/rk3288-jerry-rev2.dts
@@ -80,11 +80,11 @@
 		};
 
 		dvs_1: dvs-1 {
-			rockchip,pins = <7 11 RK_FUNC_GPIO &pcfg_pull_none>;
+			rockchip,pins = <7 11 RK_FUNC_GPIO &pcfg_pull_down>;
 		};
 
 		dvs_2: dvs-2 {
-			rockchip,pins = <7 15 RK_FUNC_GPIO &pcfg_pull_none>;
+			rockchip,pins = <7 15 RK_FUNC_GPIO &pcfg_pull_down>;
 		};
 	};
 };
