Revert "CHROMIUM: arm: dts: whirlwind: enable the third pcie slot"
This reverts commit 4eef6d9440c1af702f923614bb2a25dcfe0c41ce.

ath10k driver currently crashes if we enable the third pcie slot.

BUG=chrome-os-partner:33523
TEST='modprobe ath10k_core skip_otp=1' and run nart.out

Change-Id: I8fb6a80c43e75450e2b1130ee4f948eb53088673
Signed-off-by: Toshi Kikuchi <toshik@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/230072
Reviewed-by: Matthias Kaehlcke <mka@chromium.org>
Reviewed-by: Grant Grundler <grundler@chromium.org>
Reviewed-by: Bryan Freed <bfreed@chromium.org>

--- a/arch/arm/boot/dts/qcom-ipq8064-whirlwind.dts
+++ b/arch/arm/boot/dts/qcom-ipq8064-whirlwind.dts
@@ -264,7 +264,9 @@
 		};
 
 		pci@1b900000 {
-			status = "ok";
+			/* TODO(mka): temporarily disable the bus with the aux wlan interface as
+			   workaround for chrome-os-partner:32322 */
+			status = "disabled";
 			reset-gpio = <&qcom_pinmux 63 0>;
 			pinctrl-0 = <&pcie3_pins>;
 			pinctrl-names = "default";
