CHROMIUM: ARM: dts: modify pinctrl of vcc_5v for jerry-rev2
modify pinctrl number of vcc_5v, add enable-active-high for vcc_5v regulator.

BUG=None
TEST=Boot jerry rev2 board, and measure the vcc_5v voltage.

Change-Id: I5caa6f5bb0c9c063612d30a3e0ca76f92158af39
Signed-off-by: Chris Zhong <zyw@rock-chips.com>
Reviewed-on: https://chromium-review.googlesource.com/230100
Reviewed-by: Wei-Ning Huang <wnhuang@chromium.org>
Commit-Queue: Wei-Ning Huang <wnhuang@chromium.org>
Tested-by: Wei-Ning Huang <wnhuang@chromium.org>

--- a/arch/arm/boot/dts/rk3288-jerry-rev2.dts
+++ b/arch/arm/boot/dts/rk3288-jerry-rev2.dts
@@ -49,6 +49,7 @@
 };
 
 &vcc_5v {
+	enable-active-high;
 	gpio = <&gpio7 21 GPIO_ACTIVE_HIGH>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&drv_5v>;
@@ -57,7 +58,7 @@
 &pinctrl {
 	buck-5v {
 		drv_5v: drv-5v {
-			rockchip,pins = <7 26 RK_FUNC_GPIO &pcfg_pull_none>;
+			rockchip,pins = <7 21 RK_FUNC_GPIO &pcfg_pull_none>;
 		};
 	};
 
