CHROMIUM: ARM: dts: add hdmi regulator for jerry-rev2
add vcc50 hdmi regulator for jerry-rev2

BUG=chrome-os-partner:33269
TEST=Boot jerry rev2 board

Change-Id: I5bd2873486be2c517d168225afbef3353ed46cf7
Signed-off-by: Chris Zhong <zyw@rock-chips.com>
[dianders: changed regulator name]
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/230002

--- a/arch/arm/boot/dts/rk3288-jerry-rev2.dts
+++ b/arch/arm/boot/dts/rk3288-jerry-rev2.dts
@@ -55,6 +55,13 @@
 	pinctrl-0 = <&drv_5v>;
 };
 
+&vcc50_hdmi {
+	enable-active-high;
+	gpio = <&gpio5 19 GPIO_ACTIVE_HIGH>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&vcc50_hdmi_en>;
+};
+
 &pinctrl {
 	buck-5v {
 		drv_5v: drv-5v {
