CHROMIUM: ARM: dts: rockchip: disable gpu 500 MHz operating point
Now that we have decided to devote the NPLL to VOP_BIG (HDMI), we have no
way of safely generating 500 MHz for use by the GPU.

So, let's just disable the operating point for now.
If crosbug.com/p/32816 gets fixed, we could use a 480 MHz operating point
instead.

Signed-off-by: Daniel Kurtz <djkurtz@chromium.org>

BUG=chrome-os-partner:33857
TEST=cat /sys/devices/ffa30000.gpu/available_frequencies
 => does not list 500000000
TEST=
 echo 0 > /sys/devices/ffa30000.gpu/dvfs_enable
 echo 500000000 > /sys/devices/ffa30000.gpu/clock
 cat /sys/devices/ffa30000.gpu/clock
 => 400000000

Change-Id: I63e8d870e24ce2f6c3524a756a62bd6c4ce0c877
Reviewed-on: https://chromium-review.googlesource.com/230155
Reviewed-by: Doug Anderson <dianders@chromium.org>
Commit-Queue: Daniel Kurtz <djkurtz@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>

--- a/arch/arm/boot/dts/rk3288.dtsi
+++ b/arch/arm/boot/dts/rk3288.dtsi
@@ -672,7 +672,7 @@
 			200000 950000
 			300000 1000000
 			400000 1100000
-			500000 1200000
+			/* 500000 1200000 - See crosbug.com/p/33857 */
 			600000 1250000
 		>;
 		power-domains = <&power RK3288_PD_GPU>;
