HACK: ARM: dts: Leave USB cam on during suspend on rk3288-veyron
We're having trouble with EHCI if we turn the USB cam off during
suspend.  Leave it on till that's sorted out.

BUG=chrome-os-partner:33727
TEST=powerd_dbus_suspend

Change-Id: Iaa337d159493cfa31569cf841cb95e87c178815b
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/230333
Reviewed-by: Sonny Rao <sonnyrao@chromium.org>

--- a/arch/arm/boot/dts/rk3288-veyron.dtsi
+++ b/arch/arm/boot/dts/rk3288-veyron.dtsi
@@ -475,7 +475,10 @@
 				regulator-min-microvolt = <3300000>;
 				regulator-max-microvolt = <3300000>;
 				regulator-name = "vcc33_ccd";
-				regulator-suspend-mem-disabled;
+
+				/* TODO: would like to turn this off */
+				regulator-suspend-mem-enabled;
+				regulator-suspend-mem-microvolt = <3300000>;
 			};
 
 			vcc33_lcd: SWITCH_REG1 {
