CHROMIUM: ryu: dts: different touchscreen config for different builds
The touchscreen interrupt line is routed to different gpios on different
builds. This patch configs it accordingly.

BUG=chrome-os-partner:33542
TEST=touchscreen on P0/P1 build still works

Signed-off-by: Yufeng Shen <miletus@chromium.org>

Change-Id: I6d781086c2b38fd8324eba77506ddff43b40f49d
Reviewed-on: https://chromium-review.googlesource.com/230593
Reviewed-by: Anatol Pomazau <anatol@google.com>
Tested-by: Yufeng Shen <miletus@chromium.org>
Commit-Queue: Yufeng Shen <miletus@google.com>

--- a/arch/arm64/boot/dts/tegra132-ryu-p1.dts
+++ b/arch/arm64/boot/dts/tegra132-ryu-p1.dts
@@ -19,6 +19,12 @@
 		};
 	};
 
+	i2c@7000c000 {
+		touchscreen: i2c-hid-dev@20 {
+			interrupts = <TEGRA_GPIO(K, 2) IRQ_TYPE_EDGE_FALLING>;
+		};
+	};
+
 	thermal-zones {
 		cpu {
 			trips {
