CHROMIUM: ryu: dts: Make power button gpio active low on P3
BUG=chrome-os-partner:33545
TEST=boot on P1, use evtest to make sure userspace sees power button press correctly
     able to turn on device using the power button
     long power button press caused device reboot

Signed-off-by: Anatol Pomazau <anatol@google.com>

Change-Id: I30c73673cf68059027b89ac0410a5a080e3fd758
Reviewed-on: https://chromium-review.googlesource.com/230596
Reviewed-by: David Riley <davidriley@chromium.org>
Reviewed-by: Anatol Pomazau <anatol@google.com>
Commit-Queue: Anatol Pomazau <anatol@google.com>
Tested-by: Anatol Pomazau <anatol@google.com>

--- a/arch/arm64/boot/dts/tegra132-ryu-p0.dts
+++ b/arch/arm64/boot/dts/tegra132-ryu-p0.dts
@@ -7,6 +7,12 @@
 	compatible = "google,ryu-rev0", "google,ryu-p0", "google,ryu", \
 			"nvidia,tegra132", "nvidia,tegra124";
 
+	gpio-keys {
+		power {
+			gpios = <&gpio TEGRA_GPIO(Q, 0) GPIO_ACTIVE_HIGH>;
+		};
+	};
+
 	regulators {
 		pplcd_vdd: fixed-regulator@5 {
 			gpio = <&palmas_gpio 6 0>;
