CHROMIUM: ryu: dts: Add charger driver to dts file
BUG=chrome-os-partner:31931
TEST=/sys/class/power_supply/bq2477x-ac/online works in ryu P3

Signed-off-by: Puthikorn Voravootivat <puthik@chromium.org>

Change-Id: I99edeeadf3ccabf71ba075bc42a7c1c435ff7516
Reviewed-on: https://chromium-review.googlesource.com/230626
Reviewed-by: Benson Leung <bleung@chromium.org>
Commit-Queue: Puthikorn Voravootivat <puthik@chromium.org>
Tested-by: Puthikorn Voravootivat <puthik@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -95,6 +95,13 @@
 					reg = <0x55>;
 					battery-name = "battery";
 				};
+
+				battery_charger: bq24773@6a {
+					compatible = "ti,bq24773";
+					reg = <0x6a>;
+					monitor-mode;
+					ti,charger-detect-gpio = <&gpio TEGRA_GPIO(Q, 5) GPIO_ACTIVE_LOW>;
+				};
 			};
 		};
 
