CHROMIUM: ryu: dts: Add pull up to KB_COL5 pin
We add signal ACOK_AP_L from charger to the AP at pin KB_COL5 in
ryu P3. This is an open drain signal so that it will require a
pull-up from the AP.

Also this pin does not connect in ryu P2 and earlier so it is safe
to add to common dts.

Signed-off-by: Puthikorn Voravootivat <puthik@chromium.org>

BUG=chrome-os-partner:32115
TEST=/sys/class/power_supply/bq2477x-ac/online works in ryu P3

Change-Id: I623e79bd620ed18170ff839e252a479a23b16ab8
Reviewed-on: https://chromium-review.googlesource.com/230625
Reviewed-by: Benson Leung <bleung@chromium.org>
Commit-Queue: Puthikorn Voravootivat <puthik@chromium.org>
Tested-by: Puthikorn Voravootivat <puthik@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu-pinmux.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu-pinmux.dtsi
@@ -737,6 +737,14 @@
 				nvidia,enable-input = <TEGRA_PIN_ENABLE>;
 			};
 
+			kb_col5_pq5 {
+				nvidia,pins = "kb_col5_pq5";
+				nvidia,function = "rsvd2";
+				nvidia,pull = <TEGRA_PIN_PULL_UP>;
+				nvidia,tristate = <TEGRA_PIN_DISABLE>;
+				nvidia,enable-input = <TEGRA_PIN_ENABLE>;
+			};
+
 			kb_col6_pq6 {
 				nvidia,pins = "kb_col6_pq6";
 				nvidia,function = "rsvd2";
@@ -1338,14 +1346,6 @@
 
 			kb_col1_pq1 {
 				nvidia,pins = "kb_col1_pq1";
-				nvidia,function = "rsvd2";
-				nvidia,pull = <TEGRA_PIN_PULL_DOWN>;
-				nvidia,tristate = <TEGRA_PIN_ENABLE>;
-				nvidia,enable-input = <TEGRA_PIN_DISABLE>;
-			};
-
-			kb_col5_pq5 {
-				nvidia,pins = "kb_col5_pq5";
 				nvidia,function = "rsvd2";
 				nvidia,pull = <TEGRA_PIN_PULL_DOWN>;
 				nvidia,tristate = <TEGRA_PIN_ENABLE>;
