CHROMIUM: storm: Add port mapping information
Port mapping information is hard coded in the switch driver, which
doesn't enforces the configuration to be the same on all platforms
using this driver.
As qca8337-lite driver is now migrating to a DT base configuration,
we need to store the port based VLAN configuratoin in the device
tree. Storm configuration has 2 VLANS, including 0/4 and 6/1/2/3.

BUG=chrome-os-partner:33565
TEST=Build only. This doesn't change anything functionally yet.
     Run-time tests will be done with the corresponding driver change.

Change-Id: I44261cfe4970a726cc876ff56a670a4f0e2bd4a7
Signed-off-by: Mathieu Olivari <mathieu@codeaurora.org>
Reviewed-on: https://chromium-review.googlesource.com/230825
Reviewed-by: Toshi Kikuchi <toshik@chromium.org>

--- a/arch/arm/boot/dts/qcom-ipq8064-storm.dts
+++ b/arch/arm/boot/dts/qcom-ipq8064-storm.dts
@@ -458,6 +458,10 @@
 			device-type = "network";
 			compatible = "qca8337-lite";
 			mdiobus = <&mdio0>;
+			qca,vlan-portmap = <
+				0x1     0x4e            /* VLAN1 Ports 1/6 */
+				0x2     0x21            /* VLAN2 Ports 0/2 */
+			>;
 		};
 
 		watchdog@208a038 {
